# ecs

./: CMakeLists.txt  main.cpp
src/: Component.cpp  Component.h  ECS.h
src/components/: Actor.cpp  Actor.h  Pos2d.cpp  Pos2d.h
src/systems/: GameLogic.cpp  GameLogic.h
